removed iframe scrollbar issue

--- a/blocks/iframe/iframe.css
+++ b/blocks/iframe/iframe.css
@@ -1,9 +1,8 @@
 .iframe-wrapper {
   position: relative;
   width: 100%;
-  padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
-  height: 0;
   overflow: hidden;
+  height: 1220px;
 }
 
 .iframe-wrapper iframe {
